Add changes for JDK 22